--- a/hllibesper/hllibesper.vcxproj.filters
+++ b/hllibesper/hllibesper.vcxproj.filters
@@ -97,6 +97,12 @@
     <ClCompile Include="engineconfig.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="csamples.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="utils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="esper.h">
@@ -142,6 +148,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\ESPER\pitchCalcFallback.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="utils.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="csamples.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="engineconfig.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
