i think esper files work

--- a/esper/esper-config.ini
+++ b/esper/esper-config.ini
@@ -24,10 +24,10 @@ pitchSearchRange = 0.55
 ;use with caution, especially overwriteFrqFiles!
 ;This only has an effect if the matching use option is set to false.
 ;
-useFrqFiles = false
+useFrqFiles = true
 createFrqFiles = false
 overwriteFrqFiles = false
-useEsperFiles = false
+useEsperFiles = true
 createEsperFiles = false
 overwriteEsperFiles = false
 
