time to move on to realistic tuning

--- a/esper/esper-config.ini
+++ b/esper/esper-config.ini
@@ -24,7 +24,7 @@ pitchSearchRange = 0.55
 ;use with caution, especially overwriteFrqFiles!
 ;This only has an effect if the matching use option is set to false.
 ;
-useFrqFiles = true
+useFrqFiles = false
 createFrqFiles = false
 overwriteFrqFiles = false
 useEsperFiles = true
