--- a/resamplers/esperutau/esper-config.ini
+++ b/resamplers/esperutau/esper-config.ini
@@ -10,7 +10,7 @@
 ;pitchSearchRange: the range of pitches to search for when calculating pitch.
 ;0.25 corresponds to a search range of one octave, 0.5 to two octaves, 0.666 to three octaves, etc.
 ;
-expectedPitch = 0
+expectedPitch = C4
 pitchSearchRange = 0.55
 
 [caching]
@@ -24,7 +24,7 @@ pitchSearchRange = 0.55
 ;use with caution, especially overwriteFrqFiles!
 ;This only has an effect if the matching use option is set to false.
 ;
-useFrqFiles = false
+useFrqFiles = true
 createFrqFiles = false
 overwriteFrqFiles = false
 useEsperFiles = true
